--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
   </head>
   <body>
     <h1>Welcome to The Weather App</h1>
-    <footer>Coded by Holly Wigmore💟</footer>
+    <footer>
+      Coded by
+      <a href="https://hollyberrywigmore.com/" target="_blank">
+        Holly Wigmore💟</a
+      ><br />
+      Code hosted on
+      <a href="https://github.com/Holly-Wigmore" target="_blank"> Github</a
+      ><br />
+      Website hosted on
+      <a href="https://hollyweatherapp.netlify.app/" target="_blank">
+        Netlify</a
+      >
+    </footer>
     <script src="src/script.js"></script>
   </body>
 </html>
