--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
       Coded by
       <a href="https://hollyberrywigmore.com/" target="_blank">
         Holly Wigmore💟</a
-      ><br />
-      Code hosted on
-      <a href="https://github.com/Holly-Wigmore" target="_blank"> Github</a
-      ><br />
-      Website hosted on
+      >
+      , is open-sourced on
+      <a href="https://github.com/Holly-Wigmore" target="_blank"> Github👩‍💻</a>
+      , and hosted on
       <a href="https://hollyweatherapp.netlify.app/" target="_blank">
-        Netlify</a
+        Netlify🖥️</a
       >
     </footer>
     <script src="src/script.js"></script>
