--- a/index.html
+++ b/index.html
@@ -7,19 +7,27 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <h1>Welcome to The Weather App</h1>
-    <footer>
-      Coded by
-      <a href="https://hollyberrywigmore.com/" target="_blank">
-        Holly Wigmore💟</a
-      >
-      , is open-sourced on
-      <a href="https://github.com/Holly-Wigmore" target="_blank"> Github👩‍💻</a>
-      , and hosted on
-      <a href="https://hollyweatherapp.netlify.app/" target="_blank">
-        Netlify🖥️</a
-      >
-    </footer>
+    <div class="container">
+      <img src="#" class="header" />
+      <form>
+        <input type="text" class="text-input" />
+        <input type="submit" value="Submit" class="search-btn" />
+      </form>
+
+      <h1>Welcome to The Weather App</h1>
+      <footer>
+        Coded by
+        <a href="https://hollyberrywigmore.com/" target="_blank">
+          Holly Wigmore💟</a
+        >
+        , is open-sourced on
+        <a href="https://github.com/Holly-Wigmore" target="_blank"> Github👩‍💻</a>
+        , and hosted on
+        <a href="https://hollyweatherapp.netlify.app/" target="_blank">
+          Netlify🖥️</a
+        >
+      </footer>
+    </div>
     <script src="src/script.js"></script>
   </body>
 </html>
