Added HTML and Logo

--- a/index.html
+++ b/index.html
@@ -8,13 +8,31 @@
   </head>
   <body>
     <div class="container">
-      <img src="#" class="header" />
-      <form>
-        <input type="text" class="text-input" />
-        <input type="submit" value="Submit" class="search-btn" />
-      </form>
-
-      <h1>Welcome to The Weather App</h1>
+      <header>
+        <img src="img/Weather App Logo.jpg" class="header" />
+        <form>
+          <input
+            type="search"
+            class="text-input"
+            placeholder="Enter a City..."
+            required
+          />
+          <input type="submit" value="Submit" class="search-btn" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>London</h1>
+          <p>
+            Day and Time, Condition
+            <br />
+            Humidity: 22%, Wind: 22km/h
+          </p>
+        </div>
+        <div>
+          <p>☀️ 22°C</p>
+        </div>
+      </main>
       <footer>
         Coded by
         <a href="https://hollyberrywigmore.com/" target="_blank">
