--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Forecast</title>
     <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
       <header>
         <img src="img/Weather App Logo.jpg" class="header" />
-        <form>
+        <form class="search-form">
           <input
             type="search"
-            class="text-input"
+            class="search-input"
             placeholder="Enter a City..."
             required
           />
@@ -21,16 +27,20 @@
         </form>
       </header>
       <main>
-        <div>
-          <h1>London</h1>
-          <p>
-            Day and Time, Condition
-            <br />
-            Humidity: 22%, Wind: 22km/h
-          </p>
-        </div>
-        <div>
-          <p>☀️ 22°C</p>
+        <div class="forecast-data">
+          <div>
+            <h1 class="city">London</h1>
+            <p class="forecast-details">
+              Day and Time, Condition
+              <br />
+              Humidity: <strong>22%</strong>, Wind: <strong>22km/h</strong>
+            </p>
+          </div>
+          <div class="temperature-container">
+            <div class="forecast-icon">☀️</div>
+            <div class="forecast-temperature">22</div>
+            <div class="forecast-unit">°C</div>
+          </div>
         </div>
       </main>
       <footer>
