--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
           <div>
             <h1 class="city"></h1>
             <p class="forecast-details">
-              <span id="current-date">Day and Time</span>
-              <span id="condition">, Condition</span>
+              <span id="current-time"></span>
+              ,
+              <span id="condition"></span>
               <br />
-              Humidity: <strong>22%</strong>, Wind: <strong>22km/h</strong>
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind"></strong>
             </p>
           </div>
           <div class="temperature-container">
