Added weather icon API and some more weather data

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </p>
           </div>
           <div class="temperature-container">
-            <div class="forecast-icon">☀️</div>
+            <div id="icon"></div>
             <div class="forecast-temperature" id="city-temperature"></div>
             <div class="forecast-unit">°C</div>
           </div>
