Added HTML and CSS for daily forecast, also added Javascript to loop through daily forecast

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <div class="forecast-unit">°C</div>
           </div>
         </div>
+        <div class="daily-forecast" id="daily-forecast"></div>
       </main>
       <footer>
         Coded by
